tests/core/error/describe-1.rq
# Use glob with no variables
DESCRIBE * { }
